@@ -95,6 +95,12 @@ JVM.
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">append</td>
+    <td valign="top">whether output should be appended to or overwrite
+    an existing file.  Defaults to false.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">newenvironment</td>
     <td valign="top">Do not propagate old environment when new
       environment variables are specified. Default is &quot;false&quot;
