@@ -88,6 +88,12 @@ and <b>abort</b> execution and transaction and fail task.</p>
   <td width="78%" valign="top">Output file for result sets (defaults to System.out)</td>
   <td width="10%" valign="top">No (print to System.out by default)</td>
 </tr>
+  <tr>
+    <td valign="top">append</td>
+    <td valign="top">whether output should be appended to or overwrite
+    an existing file.  Defaults to false.</td>
+    <td align="center" valign="top">No</td>
+  </tr>
 <tr>
   <td width="12%" valign="top">classpath</td>
   <td width="78%" valign="top">Classpath used to load driver</td>
